--- a/LähiVerkko.html
+++ b/LähiVerkko.html
@@ -197,7 +197,7 @@ font-size: 14px;
 	
 <!-- iframe plugin v.2.7 wordpress.org/plugins/iframe/ -->
 	<!--Calculate the screen width with JS-->
-<iframe width="900" height="600" frameborder="0" any_other_empty_param="allowfullscreen" src="index-arvaakuka.html" scrolling="no"  ></iframe>
+<iframe width="900" height="600" frameborder="0" any_other_empty_param="allowfullscreen" src="index.html" scrolling="no"  ></iframe>
 	<div id="themify_builder_content-365" class="themify_builder_content themify_builder themify_builder_front">
 		
 		
